bugfix on mobiles + about me text

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ input[type="checkbox"] {
 
 .lbl-toggle {
     font-weight:bold;
-    display: block;
+    display: inline-block;
     text-align: left;
     cursor: pointer;
     border-radius: 7px;
@@ -183,7 +183,7 @@ input[type="checkbox"] {
 
 .collapsible-content {
     max-height: 0px;
-    overflow: hidden;
+    overflow: scroll;
     transition: max-height 0.25s ease-in-out;
 }
 
